Remove unsupported plugin

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,9 +1,3 @@
-figure{
+.figure-caption{
   text-align: center;
-  border: 1px solid grey;
-  padding: 15px;
-  figcaption{
-    color: grey;
-    font-style: italic;
-  }
 }
